--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -1,31 +1,31 @@
 .navbar-brand {
-    font-family: $font-family-base;
-    font-size: 24px;
+  font-family: $font-family-base;
+  font-size: 24px;
+}
+.card-header {
+  background-color: $primary;
+  color: white;
+  font-family: $font-family-arvo;
+  text-align: center;
+}
+.card-text {
+  color: $secondary;
+  font-size: 18px;
+  text-align: center;
+}
+.carousel-item {
+  img {
+    width: 100%;
+    max-height: 350px;
+    object-fit: contain;
   }
-  .card-header {
-    background-color: $primary;
-    color: white;
-    font-family: $font-family-arvo;
-    text-align: center;
-  }
-  .card-text {
-    color: $secondary;
-    font-size: 18px;
-    text-align: center;
-  }
-  .carousel-item {
-    img {
-      width: 100%;
-      max-height: 350px;
-      object-fit: contain;
-    }
-  }
-  .carousel-caption {
-    background-color: white;
-    opacity: 0.7;
-    width: 20%;
-    color: black
-  }
-  .card-body {
-    overflow-x: auto;
-  }
+}
+.carousel-caption {
+  background-color: white;
+  opacity: 0.7;
+  width: 20%;
+  color: black;
+}
+.card-body {
+  overflow-x: auto;
+}
